# SAE4DLM-CE

./: .gitignore  100_000_token_budget_exp3.ipynb  README.md  collect_activations.py  download_dream_models.py  download_saes.py  experiment1_local_smoke.py  final_result.ipynb  manual_interp.py  plot.py  pyproject.toml  thousand_token_exp3.ipynb  visualize_activations.py
autointerp_hf/: config.py  data_utils.py  dream_and_llm_sae_interp_scores.csv  dream_sae_interp_scores.csv  indexing_utils.py  results_analysis.ipynb  run_dlm_eval.py  run_llm_eval.py  utils.py
data/: delta_lm_loss.mask.1.json  delta_lm_loss.mask.10.json  delta_lm_loss.mask.11.json  delta_lm_loss.mask.12.json  delta_lm_loss.mask.13.json  delta_lm_loss.mask.14.json  delta_lm_loss.mask.15.json  delta_lm_loss.mask.16.json  delta_lm_loss.mask.17.json  delta_lm_loss.mask.2.json  delta_lm_loss.mask.3.json  delta_lm_loss.mask.4.json  delta_lm_loss.mask.5.json  delta_lm_loss.mask.6.json  delta_lm_loss.mask.7.json  delta_lm_loss.mask.8.json  delta_lm_loss.mask.9.json
dlm_order/: dlm_order.py  dream_infer.py  sae_utils.py
dristifolder/: README.md
dristifolder/autointerp_hf/: __init__.py  autointerp.py  config.py  eval_output.py  examples.py  hooks.py  judge.py  run_dlm_eval.py
dristifolder/dlm_order/: plot.py
dristifolder/steering/: build_features_file.py
dristifolder/train_dlm_sae/: demo.py  demo_config.py  parallel_training.py  parallel_training_layers.py
steering/run_steer/: dlm_steer_patched.py
train_dlm_sae/: demo.py  parallel_training_exp5.py  pyproject.toml
(+25 files in other folders)
