[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae4dlm-ce-env"
version = "0.1.0"
description = "Environment for running Dream SAE autointerp"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "numpy<2",
  "scipy<1.13",
  "tabulate",
  "huggingface_hub",
  "datasets",
  "accelerate",
  "sentencepiece",
  "openai",
  "sae-lens<6",
  "transformer-lens<2.16",
  "transformers>=4.45,<4.53",
]

[tool.setuptools]
packages = []
